# TE2_Daros_II

./: CMakeLists.txt  README.md
src/: algoritmos.cpp  algoritmos.h  benchmark.cpp  benchmark.h  bst.h  graficar.cpp  linkedlist.h  main.cpp
